Introduced a batch of extensions

--- a/Authenticator/Base.lproj/ATCMain.storyboard
+++ b/Authenticator/Base.lproj/ATCMain.storyboard
@@ -669,16 +669,16 @@
             <objects>
                 <viewController id="XfG-lQ-9wD" customClass="ATCMainContentViewController" sceneMemberID="viewController">
                     <view key="view" id="m2S-Jp-Qdl" customClass="ATCMainContentView">
-                        <rect key="frame" x="0.0" y="0.0" width="424" height="418"/>
+                        <rect key="frame" x="0.0" y="0.0" width="424" height="512"/>
                         <autoresizingMask key="autoresizingMask"/>
                         <subviews>
-                            <scrollView borderType="none" autohidesScrollers="YES" horizontalLineScroll="91" horizontalPageScroll="10" verticalLineScroll="91" verticalPageScroll="10" usesPredominantAxisScrolling="NO" translatesAutoresizingMaskIntoConstraints="NO" id="BEz-oe-qrV">
-                                <rect key="frame" x="0.0" y="0.0" width="424" height="322"/>
+                            <scrollView misplaced="YES" borderType="none" autohidesScrollers="YES" horizontalLineScroll="83" horizontalPageScroll="10" verticalLineScroll="83" verticalPageScroll="10" usesPredominantAxisScrolling="NO" translatesAutoresizingMaskIntoConstraints="NO" id="BEz-oe-qrV">
+                                <rect key="frame" x="0.0" y="94" width="424" height="322"/>
                                 <clipView key="contentView" drawsBackground="NO" copiesOnScroll="NO" id="KrV-Uh-5kV">
                                     <rect key="frame" x="0.0" y="0.0" width="424" height="322"/>
                                     <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                     <subviews>
-                                        <tableView verticalHuggingPriority="750" allowsExpansionToolTips="YES" columnAutoresizingStyle="lastColumnOnly" multipleSelection="NO" autosaveColumns="NO" typeSelect="NO" rowHeight="89" rowSizeStyle="automatic" viewBased="YES" id="d6W-DR-s03">
+                                        <tableView verticalHuggingPriority="750" allowsExpansionToolTips="YES" columnAutoresizingStyle="lastColumnOnly" multipleSelection="NO" autosaveColumns="NO" typeSelect="NO" rowHeight="81" rowSizeStyle="automatic" viewBased="YES" id="d6W-DR-s03">
                                             <rect key="frame" x="0.0" y="0.0" width="424" height="322"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <size key="intercellSpacing" width="3" height="2"/>
@@ -699,11 +699,11 @@
                                                     <tableColumnResizingMask key="resizingMask" resizeWithTable="YES" userResizable="YES"/>
                                                     <prototypeCellViews>
                                                         <tableCellView id="EmX-pO-Q86" customClass="ATCOTPEntryTableCellView">
-                                                            <rect key="frame" x="1" y="1" width="426" height="89"/>
+                                                            <rect key="frame" x="1" y="1" width="426" height="81"/>
                                                             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                                             <subviews>
                                                                 <textField identifier="created-date-field" horizontalHuggingPriority="251" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="djA-mP-XkM">
-                                                                    <rect key="frame" x="18" y="63" width="134" height="19"/>
+                                                                    <rect key="frame" x="18" y="55" width="134" height="19"/>
                                                                     <constraints>
                                                                         <constraint firstAttribute="width" relation="greaterThanOrEqual" id="1nG-6C-HT5"/>
                                                                         <constraint firstAttribute="height" constant="19" id="qZE-BG-0XK"/>
@@ -715,7 +715,7 @@
                                                                     </textFieldCell>
                                                                 </textField>
                                                                 <textField identifier="user-name-field" horizontalHuggingPriority="251" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="3z0-Af-kgE">
-                                                                    <rect key="frame" x="18" y="15" width="134" height="19"/>
+                                                                    <rect key="frame" x="18" y="11" width="134" height="19"/>
                                                                     <constraints>
                                                                         <constraint firstAttribute="height" constant="19" id="3Q1-Kq-EE0"/>
                                                                         <constraint firstAttribute="width" relation="greaterThanOrEqual" id="r9Z-lg-t9C"/>
@@ -727,11 +727,7 @@
                                                                     </textFieldCell>
                                                                 </textField>
                                                                 <textField identifier="service-name-field" horizontalHuggingPriority="251" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="oig-Ue-GI5">
-                                                                    <rect key="frame" x="18" y="38" width="134" height="23"/>
-                                                                    <constraints>
-                                                                        <constraint firstAttribute="width" relation="greaterThanOrEqual" id="2mt-gn-k8p"/>
-                                                                        <constraint firstAttribute="height" constant="23" id="wQj-A7-j4I"/>
-                                                                    </constraints>
+                                                                    <rect key="frame" x="18" y="34" width="134" height="19"/>
                                                                     <textFieldCell key="cell" lineBreakMode="truncatingTail" sendsActionOnEndEditing="YES" title="Facebook" id="p1N-6z-L8s">
                                                                         <font key="font" size="15" name="Helvetica-Light"/>
                                                                         <color key="textColor" red="0.28823470188405398" green="0.29257994864612513" blue="0.28388945512198277" alpha="0.84999999999999998" colorSpace="calibratedRGB"/>
@@ -749,29 +745,29 @@
                                                                     <font key="titleFont" metaFont="system"/>
                                                                 </box>
                                                                 <customView translatesAutoresizingMaskIntoConstraints="NO" id="H4A-Yf-8Iy" customClass="ATCOTPBadgeView">
-                                                                    <rect key="frame" x="158" y="11" width="245" height="71"/>
+                                                                    <rect key="frame" x="158" y="11" width="245" height="66"/>
                                                                     <constraints>
                                                                         <constraint firstAttribute="width" constant="245" id="3Tj-xq-hYI"/>
-                                                                        <constraint firstAttribute="height" constant="71" id="IKB-gq-cKj"/>
+                                                                        <constraint firstAttribute="height" constant="66" id="IKB-gq-cKj"/>
                                                                     </constraints>
                                                                 </customView>
                                                             </subviews>
                                                             <constraints>
-                                                                <constraint firstItem="H4A-Yf-8Iy" firstAttribute="top" secondItem="EmX-pO-Q86" secondAttribute="top" constant="7" id="87O-eW-fDD"/>
-                                                                <constraint firstItem="H4A-Yf-8Iy" firstAttribute="leading" secondItem="oig-Ue-GI5" secondAttribute="trailing" constant="8" id="8RF-gq-PVd"/>
                                                                 <constraint firstItem="djA-mP-XkM" firstAttribute="top" secondItem="EmX-pO-Q86" secondAttribute="top" constant="7" id="9JJ-3C-xVu"/>
+                                                                <constraint firstItem="oig-Ue-GI5" firstAttribute="top" secondItem="djA-mP-XkM" secondAttribute="bottom" constant="2" id="AF9-QZ-a9e"/>
                                                                 <constraint firstAttribute="trailing" secondItem="0rV-qC-jo5" secondAttribute="trailing" constant="20" id="FSZ-eD-j3I"/>
                                                                 <constraint firstAttribute="bottom" secondItem="0rV-qC-jo5" secondAttribute="bottom" constant="3" id="GQp-31-dxp"/>
-                                                                <constraint firstItem="oig-Ue-GI5" firstAttribute="leading" secondItem="EmX-pO-Q86" secondAttribute="leading" constant="20" id="KOm-5Y-atG"/>
+                                                                <constraint firstItem="3z0-Af-kgE" firstAttribute="top" secondItem="oig-Ue-GI5" secondAttribute="bottom" constant="4" id="HWA-ZJ-vhc"/>
+                                                                <constraint firstItem="0rV-qC-jo5" firstAttribute="top" secondItem="3z0-Af-kgE" secondAttribute="bottom" constant="8" id="Q6n-Eq-akI"/>
+                                                                <constraint firstItem="0rV-qC-jo5" firstAttribute="top" secondItem="H4A-Yf-8Iy" secondAttribute="bottom" constant="8" id="QcQ-bN-SY8"/>
                                                                 <constraint firstAttribute="trailing" secondItem="H4A-Yf-8Iy" secondAttribute="trailing" constant="23" id="TCT-9K-Pho"/>
-                                                                <constraint firstItem="oig-Ue-GI5" firstAttribute="top" secondItem="djA-mP-XkM" secondAttribute="bottom" constant="2" id="d1b-AA-mIp"/>
                                                                 <constraint firstItem="H4A-Yf-8Iy" firstAttribute="leading" secondItem="djA-mP-XkM" secondAttribute="trailing" constant="8" id="dVw-Kd-ECm"/>
                                                                 <constraint firstItem="0rV-qC-jo5" firstAttribute="leading" secondItem="EmX-pO-Q86" secondAttribute="leading" constant="20" id="dVy-39-5VX"/>
                                                                 <constraint firstItem="3z0-Af-kgE" firstAttribute="leading" secondItem="EmX-pO-Q86" secondAttribute="leading" constant="20" id="eHI-XE-ZSX"/>
-                                                                <constraint firstItem="0rV-qC-jo5" firstAttribute="top" secondItem="3z0-Af-kgE" secondAttribute="bottom" constant="12" id="iv5-QY-mwK"/>
-                                                                <constraint firstItem="3z0-Af-kgE" firstAttribute="top" secondItem="oig-Ue-GI5" secondAttribute="bottom" constant="4" id="oJL-Fk-ddv"/>
+                                                                <constraint firstItem="oig-Ue-GI5" firstAttribute="leading" secondItem="djA-mP-XkM" secondAttribute="leading" id="gdy-Ts-QN1"/>
+                                                                <constraint firstItem="H4A-Yf-8Iy" firstAttribute="top" secondItem="EmX-pO-Q86" secondAttribute="top" constant="4" id="nyp-hI-GpX"/>
+                                                                <constraint firstItem="H4A-Yf-8Iy" firstAttribute="leading" secondItem="oig-Ue-GI5" secondAttribute="trailing" constant="8" symbolic="YES" id="qJS-rL-u3k"/>
                                                                 <constraint firstItem="djA-mP-XkM" firstAttribute="leading" secondItem="EmX-pO-Q86" secondAttribute="leading" constant="20" id="sag-0P-2sG"/>
-                                                                <constraint firstItem="0rV-qC-jo5" firstAttribute="top" secondItem="H4A-Yf-8Iy" secondAttribute="bottom" constant="8" id="vka-jA-4TZ"/>
                                                                 <constraint firstItem="H4A-Yf-8Iy" firstAttribute="leading" secondItem="3z0-Af-kgE" secondAttribute="trailing" constant="8" id="xnV-cI-3at"/>
                                                             </constraints>
                                                             <connections>
@@ -806,7 +802,7 @@
                                 </scroller>
                             </scrollView>
                             <button verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="wFK-7M-lIN">
-                                <rect key="frame" x="384" y="384" width="30" height="25"/>
+                                <rect key="frame" x="384" y="478" width="30" height="25"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="22" id="Tmr-Xk-sEt"/>
                                     <constraint firstAttribute="width" constant="30" id="xiZ-gW-0jj"/>
@@ -844,7 +840,7 @@
                     </items>
                 </menu>
             </objects>
-            <point key="canvasLocation" x="29" y="947"/>
+            <point key="canvasLocation" x="29" y="994"/>
         </scene>
     </scenes>
     <resources>
